--- a/home-assistant-plugin/custom_components/buspro/manifest.json
+++ b/home-assistant-plugin/custom_components/buspro/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "",
   "dependencies": [],
   "codeowners": [],
-  "requirements": [],
+  "requirements": ["git+https://github.com/eyesoft/pybuspro.git@1.0.0#pybuspro==1.0.0"],
   "iot_class": "local_polling",
   "version": "1.0.0"
 }
